llvm/dev/catalan.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/catalan.llvm:65:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
